--- a/dmu1/dmu1_ml_CDFS-SWIRE/notebook_output/1.6_Fireworks.html
+++ b/dmu1/dmu1_ml_CDFS-SWIRE/notebook_output/1.6_Fireworks.html
@@ -11726,9 +11726,7 @@ body {
 div#notebook {
   overflow: visible;
   border-top: none;
-}
-
-@media print {
+}@media print {
   div.cell {
     display: block;
     page-break-inside: avoid;
@@ -11749,7 +11747,7 @@ div#notebook {
 
 <!-- Loading mathjax macro -->
 <!-- Load mathjax -->
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -11773,12 +11771,11 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="CDFS-SWIRE-master-catalogue">CDFS SWIRE master catalogue<a class="anchor-link" href="#CDFS-SWIRE-master-catalogue">&#182;</a></h1><h2 id="Preparation-of-Fireworks-data">Preparation of Fireworks data<a class="anchor-link" href="#Preparation-of-Fireworks-data">&#182;</a></h2><p>FIREWORKS photometry of GOODS CDF-S catalogue: the catalogue comes from <code>dmu0_Fireworks</code>.</p>
+<h1 id="CDFS-SWIRE-master-catalogue">CDFS SWIRE master catalogue<a class="anchor-link" href="#CDFS-SWIRE-master-catalogue">&#194;&#182;</a></h1><h2 id="Preparation-of-Fireworks-data">Preparation of Fireworks data<a class="anchor-link" href="#Preparation-of-Fireworks-data">&#194;&#182;</a></h2><p>FIREWORKS photometry of GOODS CDF-S catalogue: the catalogue comes from <code>dmu0_Fireworks</code>.</p>
 <p>In the catalogue, we keep:</p>
 <ul>
 <li>The identifier (it's unique in the catalogue);</li>
@@ -11808,7 +11805,9 @@ div#notebook {
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>This notebook was run with herschelhelp_internal version: 
@@ -11870,12 +11869,11 @@ div#notebook {
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="I---Column-selection">I - Column selection<a class="anchor-link" href="#I---Column-selection">&#182;</a></h2>
+<h2 id="I---Column-selection">I - Column selection<a class="anchor-link" href="#I---Column-selection">&#194;&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -11984,7 +11982,9 @@ div#notebook {
 
 
 <div class="output_area">
+
 <div class="prompt output_prompt">Out[6]:</div>
+
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
@@ -12030,17 +12030,15 @@ require(["datatables"], function(){
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="II---Removal-of-duplicated-sources">II - Removal of duplicated sources<a class="anchor-link" href="#II---Removal-of-duplicated-sources">&#182;</a></h2>
+<h2 id="II---Removal-of-duplicated-sources">II - Removal of duplicated sources<a class="anchor-link" href="#II---Removal-of-duplicated-sources">&#194;&#182;</a></h2>
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -12094,7 +12092,9 @@ require(["datatables"], function(){
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stderr output_text">
 <pre>/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.
@@ -12105,7 +12105,9 @@ Check the NumPy 1.11 release notes for more information.
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>The initial catalogue had 6308 sources.
@@ -12119,12 +12121,11 @@ The cleaned catalogue has 0 sources flagged as having been cleaned
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="III---Astrometry-correction">III - Astrometry correction<a class="anchor-link" href="#III---Astrometry-correction">&#182;</a></h2><p>We match the astrometry to the Gaia one. We limit the Gaia catalogue to sources with a g band flux between the 30th and the 70th percentile. Some quick tests show that this give the lower dispersion in the results.</p>
+<h2 id="III---Astrometry-correction">III - Astrometry correction<a class="anchor-link" href="#III---Astrometry-correction">&#194;&#182;</a></h2><p>We match the astrometry to the Gaia one. We limit the Gaia catalogue to sources with a g band flux between the 30th and the 70th percentile. Some quick tests show that this give the lower dispersion in the results.</p>
 
 </div>
 </div>
@@ -12161,7 +12162,9 @@ The cleaned catalogue has 0 sources flagged as having been cleaned
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -12749,7 +12752,9 @@ TkSuQmCC
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -13103,7 +13108,9 @@ AIAjCBUAAMARfwPjZxOENKrG3wAAAABJRU5ErkJggg==
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>RA correction: 0.16079856930133474 arcsec
@@ -13148,7 +13155,9 @@ Dec correction: -0.2589072199192799 arcsec
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -13752,7 +13761,9 @@ AABJRU5ErkJggg==
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -14087,12 +14098,11 @@ AHiCUAEAADxBqAAAAJ4gVAAAAE8QKgAAgCd+AGkoY+3UUT83AAAAAElFTkSuQmCC
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="IV---Flagging-Gaia-objects">IV - Flagging Gaia objects<a class="anchor-link" href="#IV---Flagging-Gaia-objects">&#182;</a></h2>
+<h2 id="IV---Flagging-Gaia-objects">IV - Flagging Gaia objects<a class="anchor-link" href="#IV---Flagging-Gaia-objects">&#194;&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -14131,7 +14141,9 @@ AHiCUAEAADxBqAAAAJ4gVAAAAE8QKgAAgCd+AGkoY+3UUT83AAAAAElFTkSuQmCC
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>102 sources flagged.
@@ -14143,21 +14155,19 @@ AHiCUAEAADxBqAAAAJ4gVAAAAE8QKgAAgCd+AGkoY+3UUT83AAAAAElFTkSuQmCC
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="V---Flagging-objects-near-bright-stars">V - Flagging objects near bright stars<a class="anchor-link" href="#V---Flagging-objects-near-bright-stars">&#182;</a></h2>
+<h2 id="V---Flagging-objects-near-bright-stars">V - Flagging objects near bright stars<a class="anchor-link" href="#V---Flagging-objects-near-bright-stars">&#194;&#182;</a></h2>
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="VI---Saving-to-disk">VI - Saving to disk<a class="anchor-link" href="#VI---Saving-to-disk">&#182;</a></h1>
+<h1 id="VI---Saving-to-disk">VI - Saving to disk<a class="anchor-link" href="#VI---Saving-to-disk">&#194;&#182;</a></h1>
 </div>
 </div>
 </div>
